--- a/python-template/.gitignore
+++ b/python-template/.gitignore
@@ -1,4 +1,4 @@
-# Python cache and build artifacts
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
@@ -20,53 +20,38 @@ wheels/
 .installed.cfg
 *.egg
 
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+coverage.xml
+*.cover
+
+# Type checking
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Ruff
+.ruff_cache/
+
 # Virtual environments
 .venv/
 venv/
 ENV/
 env/
 
-# Testing and coverage
-.pytest_cache/
-.coverage
-.coverage.*
-htmlcov/
-.tox/
-.nox/
-
-# Type checking
-.mypy_cache/
-.dmypy.json
-dmypy.json
-.pytype/
-
-# Linting
-.ruff_cache/
-
 # IDEs
-.vscode/
 .idea/
 *.swp
 *.swo
 *~
 
-# OS files
+# OS
 .DS_Store
 Thumbs.db
 
-# Logs
-*.log
-.cursor/hooks.log
-
-# Lock files (too large)
-poetry.lock
-package-lock.json
-
-# Environment files with secrets
+# Project specific
 .env
 .env.local
-.env.*.local
-
-# Documentation builds
-docs/_build/
-site/
