--- a/python-template/.gitignore
+++ b/python-template/.gitignore
@@ -10,7 +10,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -55,3 +54,6 @@ Thumbs.db
 # Project specific
 .env
 .env.local
+
+# Data
+data
